# DronecodeSDK

./: .gitignore
backend/src/plugins/mission/: mission_service_impl.h
backend/test/: mission_service_impl_test.cpp
cmake/: unit_tests.cmake
core/: CMakeLists.txt  system_impl.cpp  system_impl.h
example/fly_auto/: .fly_auto.cpp.swp  CMakeLists.txt  fly_auto.cpp  waypoints.plan
integration_tests/: simple_hover.cpp
plugins/action/: CMakeLists.txt  action.cpp  action_impl.h
plugins/camera/: camera.cpp  camera.h  camera_impl.cpp  camera_impl.h
plugins/mission/mocks/: mission_mock.h
